--- a/blog.html
+++ b/blog.html
@@ -29,6 +29,7 @@
     <br>
     <br>
     <h2>Subheading</h2>
+    <p>Obviously planning on copying your blog posts into here<p>
 </div>
 <!-- Unique To Page -->
 <br>
