--- a/home.html
+++ b/home.html
@@ -28,28 +28,45 @@
     <br>
     <br>
     <br>
+    <br>
+    <br>
+    <br>
     <h2>Who We Are</h2>
-    <p>Medics&Me is a brand new mentoring initiative set up by medical students for applicants to medicine. Individually we would often be asked to help family friends or people in the year below at school for advice and tips on the application process. We believe this kind of advice should be available to anyone, for free. Scroll down and fill out the form to be allocated a mentor or check out our blog for advice written by medical students and Doctors. Check out our blog for free resources on aspects of life as a medical student, interview advice and much more!</p>
+    <p>When we were applying to study medicine, often we'd ask family friends or people in the year above for advice and tips. Not everyone has these connections, and we believe this kind of advice should be available to anyone, for free.</p>
+    <br>
+    <p>We are trying to bridge the gap between prospective students, and professionals who are keen to share their knowledge. On our website you can find all sorts of information, and get to know people who can support your goals.</p>
     <br>
     <h2>Get Involved</h2>
     <div class="mentee">
-        <h3>Looking to get into the medical profession?</h3>
-        <img src="mentee.jpg" alt="Mentee" style="width:300px;height:300px;">
+        <h3>Are you in pursuit of a medical career?</h3>
+        <br>
+        <br>
+        <img src="mentee.jpg" alt="Mentee">
+        <br>
+        <br>
         <br>
         <br>
         <button onclick="location.href='https://forms.gle/1CDDsGJaN6fhn5BH9'" type="button">
-            Get in Touch</button>
+            Students Get in Touch</button>
     </div>
     <div class="mentor">
-        <h3>Professional keen to pass on your knowledge?</h3>
-        <img src="mentor.jpg" alt="Mentor" style="width:300px;height:300px;">
+        <h3>Keen to share your experience?</h3>
+        <br>
+        <br>
+        <img src="mentor.jpg" alt="Mentor">
+        <br>
+        <br>
         <br>
         <br>
         <button onclick="location.href='https://forms.gle/x8JQrHT8YVs4nmuA7'" type="button">
-            Get in Touch</button>
+            Mentors Get in Touch</button>
     </div>
     <div class="clearfix"></div>
 </div>
+<br>
+<br>
+<br>
+<br>
 <!-- Unique To Page -->
 <br>
 <br>
