--- a/resources.html
+++ b/resources.html
@@ -22,7 +22,7 @@
 <!-- Unique To Page -->
 <div class="main">
     <h1>Resources</h1>
-    <h3>Informative Materials to Your Journey</h3>
+    <h3>Strengthen Your Career</h3>
     <br>
     <br>
     <br>
