--- a/about.html
+++ b/about.html
@@ -22,15 +22,14 @@
 <!-- Unique To Page -->
 <div class="main">
     <h1>All About Us</h1>
-    <h3>Enable, Support, Inspire</h3>
+    <h3>Why we started Medics&Me</h3>
     <h2>Who We Are</h2>
-    <p>Medics&Me is a brand new mentoring initiative set up by medical students for applicants to medicine. Individually we would often be asked to help family friends or people in the year below at school for advice and tips on the application process. We believe this kind of advice should be available to anyone, for free. Scroll down and fill out the form to be allocated a mentor or check out our blog for advice written by medical students and Doctors. Check out our blog for free resources on aspects of life as a medical student, interview advice and much more!</p>
+    <p>Medics&Me is a brand new mentoring initiative set up by medical students for applicants to medicine. Individually we would often be asked to help family friends or people in the year below at school for advice and tips on the application process. We believe this kind of advice should be available to anyone, for free.</p>
     <br>
     <h2>What We Do</h2>
     <p>Our aim is to reach more than 30 Widening Participation and Teach First School's over the next 2 years, scaling up the reach of the initiative whilst maintaining the community ethos and energy the programme currently has. We would also like to develop an alumni type community for any new applicants to enter into, however given many candidates are under 18 this is an area we are yet to look into given the importance of safeguarding. By recruiting mentors who align with our values and belief system we are creating a sustainable platform with inbuilt succession.</p>
     <br>
     <p>There is a succession plan in place for the candidates going through the system to then go onto mentor future students and share their insights and reflections. This model allows the growth and sustainability of this initiative in the long term. An inherent part of Medics&Me will be reflective learning to continually review and develop our practices and support. It is a long term goal of our organisation to deliver talks in Schools with the aim of potentially inspiring students who might not have even considered Medicine and helping them to believe that with the right support, they can achieve anything.</p>
-    <h2>Contact Us</h2>
 </div>
 <!-- Unique To Page -->
 <br>
