--- a/join.html
+++ b/join.html
@@ -22,12 +22,19 @@
 <!-- Unique To Page -->
 <div class="main">
     <h1>Join Our Community</h1>
-    <h3>Enable, Support, Inspire</h3>
+    <h3>Consistency is key!</h3>
     <h2>The Mailing List</h2>
-    <p>Every Friday and Monday we send out an email full of information we think you'll find interesting. If your not fully sure Medics&Me is right for you, or if you're already part of the community, we encourage you to sign up. Of course, you can unsubscribe at any time and we'll love you and leave you!</p>
-    <p></p>
+    <p>Every couple of weeks we send out an newsletter full of information we think you'll find useful. If your not fully sure Medics&Me is right for you, or if you're already part of the community, we encourage you to sign up! Of course, you can unsubscribe at any time and we'll love you and leave you!</p>
+    <br>
+    <input type="email" id="email" name="email" placeholder="enter your email here">
+    <button onclick="location.href=''" type="button">
+        Sign Up</button>
+    <p>^^This doesnt work yet but I'll setup a mailchimp or something for this^^</p>
     <br>
     <h2>Upcoming Events</h2>
+    <p>Often we host webinars with guests from universities, the medical industry, and much more. Check back regularly for new events!</p>
+    <br>
+    <p>////This is a placeholder calendar, but it'll work off the Google calendar linked to your Medics& email address//////</p>
     <div class="responsive-iframe-container big-container">
         <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FLondon&amp;src=Y2hhcmxpZXNib3N3b3J0aEBnbWFpbC5jb20&amp;src=dTQzazNmZ2J2b2FsMnMwYnQ4YWp1cThkaWNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZW4udWsjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%23F09300&amp;color=%239E69AF&amp;color=%237986CB&amp;color=%23009688&amp;showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;hl=en_GB&amp;mode=MONTH" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>    
     </div>
