--- a/blog.html
+++ b/blog.html
@@ -28,8 +28,34 @@
     <br>
     <br>
     <br>
-    <h2>Subheading</h2>
-    <p>Obviously planning on copying your blog posts into here<p>
+    <div class="blogpost" style="border: 10px solid #ccecec;">
+        <h2>7 tips for getting started with your medicine application</h2>
+        <h4>Megan Pode, 19 February '21</h4>
+    </div>
+    <div class="blogpost" style="border: 10px solid #f6dd63;">
+        <h2>An Overview of Bristol Medical School</h2>
+        <h4>fhartley, 10 February '21</h4>
+    </div>
+    <div class="blogpost" style="border: 10px solid #ccecec;">
+        <h2>Tackling the role play station in your MMI's</h2>
+        <h4>sarah.llewellyn101, 6 February '21</h4>
+    </div>
+    <div class="blogpost" style="border: 10px solid #f6dd63;">
+        <h2>Medicine on the move: our pick of the best podcasts</h2>
+        <h4>Megan Pode, 31 January '21</h4>
+    </div>
+    <div class="blogpost" style="border: 10px solid #ccecec;">
+        <h2>5 Facts about my Medical School</h2>
+        <h4>robyn.westerman32, 10 December '20</h4>
+    </div>
+    <div class="blogpost" style="border: 10px solid #f6dd63;">
+        <h2>6 Tips for getting started with interview prep</h2>
+        <h4>Megan Pode, 8 December '20</h4>
+    </div>
+    <div class="blogpost" style="border: 10px solid #ccecec;">
+        <h2>Day in the life of a third year medical student</h2>
+        <h4>Megan Pode, 6 December '20</h4>
+    </div>
 </div>
 <!-- Unique To Page -->
 <br>
