--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
         <br>
         <br>
         <br>
-        <button onclick="location.href='https://forms.gle/1CDDsGJaN6fhn5BH9'" type="button">
+        <button onclick="location.href='https://forms.gle/1CDDsGJaN6fhn5BH9'" type="button" style="background-color: #ccecec;">
             Students Get in Touch</button>
     </div>
     <div class="mentor">
