--- a/post1.html
+++ b/post1.html
@@ -21,38 +21,38 @@
 
 <!-- Unique To Page -->
 <div class="main">
-    <h1>Blog</h1>
-    <h3>Subtitle</h3>
+    <h1>7 tips for getting started with your medicine application</h1>
+    <h3>Megan Pode, 19 February '21</h3>
     <br>
     <br>
     <br>
     <br>
     <br>
-    <div class="blogpost1" style="cursor: pointer;" onclick="window.location='190221blogpost.html';">
+    <div class="blogpost1">
         <h2>7 tips for getting started with your medicine application</h2>
         <h4>Megan Pode, 19 February '21</h4>
     </div>
-    <div class="blogpost2" style="cursor: pointer;" onclick="window.location='190221blogpost.html';">
+    <div class="blogpost2">
         <h2>An Overview of Bristol Medical School</h2>
         <h4>fhartley, 10 February '21</h4>
     </div>
-    <div class="blogpost1" style="cursor: pointer;" onclick="window.location='060221blogpost.html';">
+    <div class="blogpost1">
         <h2>Tackling the role play station in your MMI's</h2>
         <h4>sarah.llewellyn101, 6 February '21</h4>
     </div>
-    <div class="blogpost2" style="cursor: pointer;" onclick="window.location='310121blogpost.html';">
+    <div class="blogpost2">
         <h2>Medicine on the move: our pick of the best podcasts</h2>
         <h4>Megan Pode, 31 January '21</h4>
     </div>
-    <div class="blogpost1" style="cursor: pointer;" onclick="window.location='101220blogpost.html';">
+    <div class="blogpost1">
         <h2>5 Facts about my Medical School</h2>
         <h4>robyn.westerman32, 10 December '20</h4>
     </div>
-    <div class="blogpost2" style="cursor: pointer;" onclick="window.location='081220blogpost.html';">
+    <div class="blogpost2">
         <h2>6 Tips for getting started with interview prep</h2>
         <h4>Megan Pode, 8 December '20</h4>
     </div>
-    <div class="blogpost1" style="cursor: pointer;" onclick="window.location='061220blogpost.html';">
+    <div class="blogpost1">
         <h2>Day in the life of a third year medical student</h2>
         <h4>Megan Pode, 6 December '20</h4>
     </div>
